tests/NormalTests/paczka1/small_fuzzy/73367696.err
Error in line 3: 8uv A398 45,0
Error in line 13: JLotP S253 82,8
